--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "autoprefixer": "^10.4.7",
     "gh-pages": "^3.2.3",
     "postcss": "^8.4.14",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "tailwindcss": "^3.1.5",
     "web-vitals": "^2.1.4"
   }
 }
